@@ -1,14 +1,15 @@
 [Desktop Entry]
 _Name=Remote Desktop Viewer
 _Comment=Access remote desktops
-Exec=vinagre %U
+Exec=vinagre -f %U
 Icon=vinagre
 Terminal=false
-MimeType=application/x-remote-connection
 Type=Application
 StartupNotify=true
+MimeType=application/x-vnc
 Categories=GNOME;GTK;Network;
 OnlyShowIn=GNOME;
+NoDisplay=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=vinagre
 X-GNOME-Bugzilla-Component=general
