@@ -5,4 +5,7 @@
 		<_comment>Remote Desktop (VNC) file</_comment>
 		<glob pattern="*.vnc"/>
 	</mime-type>
+	<mime-type type="application/x-remote-connection">
+		<_comment>Remote Desktop Connection</_comment>
+	</mime-type>
 </mime-info>
