@@ -1,6 +1,7 @@
 # List of source files containing translatable strings.
 
 data/vinagre.desktop.in.in
+data/vinagre-file.desktop.in.in
 data/vinagre.glade
 data/vinagre-mime.xml.in
 data/vinagre-ui.xml
