@@ -1,2 +1,3 @@
 data/vinagre.desktop.in
+data/vinagre-file.desktop.in
 data/vinagre-mime.xml.in
